--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ buildscript {
     ext {
         hilt_version = '2.36'
         room_version = "2.3.0"
+        nav_version = "2.3.5"
     }
     repositories {
         google()
@@ -18,6 +19,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:7.0.0-beta03'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.10"
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
+        classpath("androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version")
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
